<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:title="@string/action_history"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_categories"
        android:icon="@drawable/ic_edit"
        android:title="@string/action_categories"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_bank_directory"
        android:icon="@drawable/ic_search"
        android:title="@string/action_bank_directory"
        app:showAsAction="never" />
</menu>